--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 GOOGLE_GENAI_USE_VERTEXAI=true
 GOOGLE_CLOUD_PROJECT="spaceidlegame"
 GOOGLE_CLOUD_LOCATION="us-central1"
+
+DATABASE_URL=postgresql://postgres:password@localhost:5432/cosmic_gardener
+JWT_SECRET=my-super-secret-key-123456789
