project: [バックエンド by Rust] 基本API構築 2/10

--- a/cosmic-gardener/backend/.env.example
+++ b/cosmic-gardener/backend/.env.example
@@ -17,22 +17,14 @@ REDIS_DEFAULT_TTL=3600
 REDIS_MAX_POOL_SIZE=50
 
 # === Server Configuration ===
-SERVER_HOST=0.0.0.0
+SERVER_HOST=127.0.0.1
 SERVER_PORT=8080
-SERVER_WORKERS=4
-SERVER_KEEP_ALIVE=30
-SERVER_CLIENT_TIMEOUT=60
-SERVER_MAX_PAYLOAD_SIZE=4194304
 
 # === Security Configuration ===
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRATION=86400
-BCRYPT_COST=12
-RATE_LIMIT_REQUESTS=100
-RATE_LIMIT_WINDOW=60
+JWT_SECRET=your-secret-key-here-change-in-production
 
 # === CORS Configuration ===
-CORS_ORIGINS=http://localhost:3000,http://localhost:8080
+CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
 
 # === Logging Configuration ===
 LOG_LEVEL=info
@@ -134,9 +126,7 @@ PROMETHEUS_ENDPOINT=http://localhost:9090/metrics
 # PERFORMANCE_CPU_LIMIT=80.0
 
 # === Testing Configuration ===
-# TEST_DATABASE_URL=postgresql://postgres:password@localhost:5432/cosmic_gardener_test
-# TEST_REDIS_URL=redis://localhost:6379/1
-# TEST_PARALLEL_JOBS=4
+TEST_DATABASE_URL=postgresql://postgres:password@localhost:5432/cosmic_gardener_test
 
 # === Development Tools ===
 # RUST_ANALYZER_ENABLED=true
