--- a/cosmic-gardener/backend/Cargo.toml
+++ b/cosmic-gardener/backend/Cargo.toml
@@ -19,6 +19,7 @@ actix-identity = "0.6"
 # WebSocket サポート
 actix-web-actors = "4.2"
 tokio-tungstenite = "0.20"
+actix = "0.13"
 
 # データベース
 sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
@@ -31,6 +32,8 @@ bcrypt = "0.15"
 argon2 = "0.5"
 uuid = { version = "1.6", features = ["v4", "v7", "serde"] }
 secrecy = "0.8"
+sha2 = "0.10"
+rand = "0.8"
 
 # API ドキュメント
 utoipa = { version = "4.2", features = ["actix_extras", "chrono", "uuid"] }
@@ -44,6 +47,12 @@ bincode = "1.3"
 protobuf = "3.4"
 prost = "0.12"
 prost-types = "0.12"
+rmp-serde = "1.1"  # MessagePack
+
+# 圧縮
+lz4 = "1.24"
+zstd = "0.13"
+brotli = "3.4"
 
 # 非同期処理
 tokio = { version = "1.35", features = ["full"] }
