--- a/cosmic-gardener/frontend/tsconfig.json
+++ b/cosmic-gardener/frontend/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "target": "ES2020",
     "module": "ES2020",
+    "lib": ["ES2020", "DOM"],
     "moduleResolution": "node",
     "strict": false,
     "noImplicitAny": false,
