--- a/cosmic-gardener/frontend/package.json
+++ b/cosmic-gardener/frontend/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npx tsc",
+    "serve": "http-server -p 8000"
   },
   "repository": {
     "type": "git",
@@ -20,5 +22,8 @@
   "devDependencies": {
     "@types/three": "^0.178.0",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "http-server": "^14.1.1"
   }
 }
