--- a/cosmic-gardener/frontend/tsconfig.json
+++ b/cosmic-gardener/frontend/tsconfig.json
@@ -1,27 +1,13 @@
 
 {
   "compilerOptions": {
-    "target": "ES2020",
-    "module": "ES2020",
-    "lib": ["ES2020", "DOM"],
-    "moduleResolution": "node",
-    "strict": false,
-    "noImplicitAny": false,
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "allowJs": true,
-    "checkJs": false,
-    "noEmitOnError": false,
+    "target": "ESNext",
+    "module": "ESNext",
     "outDir": "./dist",
-    "rootDir": "."
+    "strict": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true
   },
-  "include": [
-    "js/*.ts",
-    "*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["**/*.ts"]
 }
