feat: インベントリ機能の追加とリソース管理の改善 - モバイル用インベントリボタンを追加し、インベントリUIを実装しました。 - リソースのコストに新しい項目を追加し、研究項目のコストを調整しました。 - 研究データの構造を更新し、リサーチ効果を強化しました。 - パッケージ依存関係にjs-yamlを追加しました。

--- a/cosmic-gardener/frontend/package.json
+++ b/cosmic-gardener/frontend/package.json
@@ -42,6 +42,7 @@
   "homepage": "https://github.com/Zephyrlll/Space_Idle_Game#readme",
   "description": "A 3D space simulation idle game where players create and manage cosmic objects from dust to stars",
   "dependencies": {
+    "js-yaml": "^4.1.0",
     "three": "^0.178.0",
     "vite": "^4.5.3"
   },
