--- a/cosmic-gardener/frontend/package.json
+++ b/cosmic-gardener/frontend/package.json
@@ -42,6 +42,7 @@
   "homepage": "https://github.com/Zephyrlll/Space_Idle_Game#readme",
   "description": "A 3D space simulation idle game where players create and manage cosmic objects from dust to stars",
   "dependencies": {
+    "animejs": "^4.0.2",
     "js-yaml": "^4.1.0",
     "three": "^0.178.0",
     "vite": "^4.5.3"
@@ -49,6 +50,7 @@
   "devDependencies": {
     "@playwright/test": "^1.42.0",
     "@testing-library/dom": "^10.0.0",
+    "@types/animejs": "^3.1.13",
     "@types/node": "^20.10.5",
     "@types/three": "^0.178.0",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
