--- a/cosmic-gardener/frontend/physics-config.json
+++ b/cosmic-gardener/frontend/physics-config.json
@@ -10,8 +10,7 @@
   "orbitalMechanics": {
     "enableKeplerianOrbits": true,
     "orbitalDecayRate": 0.0001,
-    "tidalLockingEnabled": false,
-    "orbitalSpeedMultiplier": 1.0
+    "tidalLockingEnabled": false
   },
   "boundaries": {
     "galaxyBoundary": 50000,
