feat: 問題識別ファイルの削除とTypeScriptファイルへのインポート変更 - 問題識別に関するテキストファイルを削除しました。 - JavaScriptファイルのインポートをTypeScriptファイルに変更し、コードの整合性を向上させました。 - ブラックホールのガス効果のデバッグ用コメントを追加し、物理計算の精度を向上させました。

--- a/cosmic-gardener/frontend/physics-config.json
+++ b/cosmic-gardener/frontend/physics-config.json
@@ -9,8 +9,9 @@
   },
   "orbitalMechanics": {
     "enableKeplerianOrbits": true,
-    "orbitalDecayRate": 0.0001,
-    "tidalLockingEnabled": false
+    "orbitalDecayRate": 0,
+    "tidalLockingEnabled": false,
+    "orbitalSpeedMultiplier": 1.0
   },
   "boundaries": {
     "galaxyBoundary": 50000,
