--- a/cosmic-gardener/frontend/tsconfig.json
+++ b/cosmic-gardener/frontend/tsconfig.json
@@ -48,7 +48,9 @@
     "dist",
     "js/**/*.js",
     ".vite",
-    "coverage"
+    "coverage",
+    "js/backup/**/*",
+    "js/config/**/*"
   ],
   "ts-node": {
     "compilerOptions": {
