--- a/cosmic-gardener/frontend/manifest.json
+++ b/cosmic-gardener/frontend/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Cosmic Gardener",
-  "short_name": "CosmicGardener",
+  "name": "Fillstellar",
+  "short_name": "Fillstellar",
   "description": "A 3D space simulation idle game where players create and manage cosmic objects from dust to stars",
   "start_url": "/",
   "display": "standalone",
