--- a/planet-exploration-babylon/package.json
+++ b/planet-exploration-babylon/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@babylonjs/core": "^8.18.0",
     "@babylonjs/gui": "^8.18.0",
+    "@babylonjs/havok": "^1.3.10",
     "@babylonjs/loaders": "^8.18.0",
     "@babylonjs/materials": "^8.18.0",
     "cannon": "^0.6.2"
