--- a/cosmic-gardener/frontend/package.json
+++ b/cosmic-gardener/frontend/package.json
@@ -45,7 +45,9 @@
     "animejs": "^4.0.2",
     "js-yaml": "^4.1.0",
     "three": "^0.178.0",
-    "vite": "^4.5.3"
+    "vite": "^4.5.3",
+    "@babylonjs/core": "^7.0.0",
+    "@babylonjs/havok": "^1.3.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.0",
